--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -108,25 +108,7 @@ hook_add = '''
 repo = 'markonm/traces.vim'
 
 [[plugins]]
-repo = 'prabirshrestha/vim-lsp'
-hook_add = '''
-    let g:lsp_async_completion = 1
-    let g:lsp_diagnostics_enabled = 1
-    let g:lsp_signs_enabled = 1
-    let g:lsp_diagnostics_echo_cursor = 1
-    let g:lsp_virtual_text_enabled = 0
-    let g:lsp_highlights_enabled = 0
-    let g:lsp_textprop_enabled = 1
-    let g:lsp_signs_error = {'text': 'x'}
-    let g:lsp_signs_warning = {'text': '!'}
-    nnoremap <C-l>d :LspDefinition<CR>
-    nnoremap <C-l>f :LspDocumentFormat<CR>
-    nnoremap <C-l>h :LspHover<CR>
-    nnoremap <C-l>r :LspReferences<CR>
-'''
-
-[[plugins]]
-repo = 'mattn/vim-lsp-settings'
+repo = 'Shougo/ddc-nvim-lsp'
 
 [[plugins]]
 repo = 'osyo-manga/vim-precious'
