--- a/.vim/dein_lazy.toml
+++ b/.vim/dein_lazy.toml
@@ -13,16 +13,16 @@ hook_source = '''
     \ }
     let g:neosnippet#snippets_directory='~/dotfiles/.vim/neosnippet/'
 '''
-on_i = 1
+on_event = 'InsertEnter'
 depends = ['neosnippet-snippets']
 
 [[plugins]]
 repo = 'Shougo/neosnippet-snippets'
-on_i = 1
+on_event = 'InsertEnter'
 
 [[plugins]]
 repo = 'Townk/vim-autoclose'
-on_i = 1
+on_event = 'InsertEnter'
 
 [[plugins]]
 repo = 'lazywei/vim-matlab'
