--- a/.vim/dein_lazy.toml
+++ b/.vim/dein_lazy.toml
@@ -1,5 +1,5 @@
 [[plugins]]
-repo = 'Shougo/neosnippet'
+repo = 'Shougo/neosnippet.vim'
 hook_source = '''
     imap <C-k> <Plug>(neosnippet_expand_or_jump)
     smap <C-k> <Plug>(neosnippet_expand_or_jump)
