--- a/.vim/dein_lazy.toml
+++ b/.vim/dein_lazy.toml
@@ -87,3 +87,14 @@ hook_source = '''
 [[plugins]]
 repo = 'rhysd/reply.vim'
 on_cmd = ['Repl', 'ReplAuto']
+
+[[plugins]]
+repo = 'mattn/vim-lsp-settings'
+on_event = 'VimEnter'
+hook_source = '''
+let g:lsp_settings = {
+\   'clangd': {
+\       'args': ['--all-scopes-completion', '--background-index', '--clang-tidy', '--limit-references=0', '--limit-results=0'],
+\   },
+\ }
+'''
