--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -233,9 +233,12 @@ hook_add = '''
 '''
 
 [[plugins]]
-repo = 'lambdalisue/fern-renderer-devicons.vim'
+repo = 'lambdalisue/nerdfont.vim'
+
+[[plugins]]
+repo = 'lambdalisue/fern-renderer-nerdfont.vim'
 hook_add = '''
-    let g:fern#renderer = "devicons"
+    let g:fern#renderer = "nerdfont"
 '''
 
 [[plugins]]
