--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -102,6 +102,7 @@ hook_add = '''
     let g:lsp_diagnostics_echo_cursor = 1
     let g:lsp_diagnostics_virtual_text_enabled = 0
     let g:lsp_highlights_enabled = 1
+    let g:lsp_log_verbose = 0
     let g:lsp_textprop_enabled = 1
     let g:lsp_signs_error = {'text': 'x'}
     let g:lsp_signs_warning = {'text': '!'}
