remove asyncomplete-buffer and add asyncomplete-around

--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -129,23 +129,39 @@ hook_add = '''
 repo = 'prabirshrestha/asyncomplete-lsp.vim'
 
 [[plugins]]
-repo = 'prabirshrestha/asyncomplete-buffer.vim'
+repo = 'akaimo/asyncomplete-around.vim'
 hook_add = '''
-    let g:asyncomplete_buffer_clear_cache = 0
+    let g:asyncomplete_around_range = 20
 
-    augroup asynCompBufferGroup
+    augroup asynCompAroundGroup
         autocmd!
-        autocmd User asyncomplete_setup call asyncomplete#register_source(asyncomplete#sources#buffer#get_source_options({
-        \ 'name': 'buffer',
+        autocmd User asyncomplete_setup call asyncomplete#register_source(asyncomplete#sources#around#get_source_options({
+        \ 'name': 'around',
         \ 'whitelist': ['*'],
         \ 'priority': 10,
-        \ 'completor': function('asyncomplete#sources#buffer#completor'),
-        \ 'config': {
-        \ 	'max_buffer_size': 5000000,
-        \ },
+        \ 'completor': function('asyncomplete#sources#around#completor'),
         \ }))
     augroup END
 '''
+
+# [[plugins]]
+# repo = 'prabirshrestha/asyncomplete-buffer.vim'
+# hook_add = '''
+#     let g:asyncomplete_buffer_clear_cache = 0
+
+#     augroup asynCompBufferGroup
+#         autocmd!
+#         autocmd User asyncomplete_setup call asyncomplete#register_source(asyncomplete#sources#buffer#get_source_options({
+#         \ 'name': 'buffer',
+#         \ 'whitelist': ['*'],
+#         \ 'priority': 10,
+#         \ 'completor': function('asyncomplete#sources#buffer#completor'),
+#         \ 'config': {
+#         \ 	'max_buffer_size': 5000000,
+#         \ },
+#         \ }))
+#     augroup END
+# '''
 
 [[plugins]]
 repo = 'prabirshrestha/asyncomplete-neosnippet.vim'
