add commandline completion using ddc-cmdline

--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -28,6 +28,12 @@ repo = 'LumaKernel/ddc-file'
 
 [[plugins]]
 repo = 'tani/ddc-fuzzy'
+
+[[plugins]]
+repo = 'Shougo/ddc-cmdline'
+
+[[plugins]]
+repo = 'Shougo/ddc-cmdline-history'
 # ddc.vim end
 
 #colorscheme start
