change to use common augroup in vimrc

--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -177,10 +177,7 @@ hook_add = '''
         nmap <buffer> fc <Plug>(fern-action-cd) :echo "cd to " . getcwd()<CR>
     endfunction
 
-    augroup fern-custom
-        autocmd! *
-        autocmd FileType fern call s:init_fern()
-    augroup END
+    autocmd vimrc FileType fern call s:init_fern()
 '''
 
 [[plugins]]
