Revert "move ddc settings to dein_lazy.toml"
This reverts commit 16f44cbc6b136cb74085357a40640e9ba701fe3c.

--- a/.vim/dein_lazy.toml
+++ b/.vim/dein_lazy.toml
@@ -1,53 +1,6 @@
-# ddc.vim start
-[[plugins]]
-repo = 'Shougo/ddc.vim'
-on_event = 'VimEnter'
-depends = ['denops.vim']
-
-[[plugins]]
-repo = 'vim-denops/denops.vim'
-on_event = 'VimEnter'
-
-[[plugins]]
-repo = 'Shougo/pum.vim'
-on_event = 'VimEnter'
-
-[[plugins]]
-repo = 'Shougo/ddc-around'
-on_event = 'VimEnter'
-
-[[plugins]]
-repo = 'Shougo/ddc-matcher_head'
-on_event = 'VimEnter'
-
-[[plugins]]
-repo = 'Shougo/ddc-sorter_rank'
-on_event = 'VimEnter'
-
-[[plugins]]
-repo = 'Shougo/ddc-converter_remove_overlap'
-on_event = 'VimEnter'
-
-[[plugins]]
-repo = 'LumaKernel/ddc-file'
-on_event = 'VimEnter'
-
-[[plugins]]
-repo = 'tani/ddc-fuzzy'
-on_event = 'VimEnter'
-
-[[plugins]]
-repo = 'Shougo/ddc-cmdline'
-on_event = 'VimEnter'
-
-[[plugins]]
-repo = 'Shougo/ddc-cmdline-history'
-on_event = 'VimEnter'
-# ddc.vim end
-
 [[plugins]]
 repo = 'hrsh7th/vim-vsnip'
-on_event = 'VimEnter'
+on_event = 'InsertEnter'
 depends = ['vim-vsnip-integ', 'friendly-snippets']
 hook_add = '''
     imap <expr> <C-k> vsnip#expandable() ? '<Plug>(vsnip-expand)' : '<C-k>'
@@ -95,35 +48,6 @@ hook_source = '''
 [[plugins]]
 repo = 'rhysd/reply.vim'
 on_cmd = ['Repl', 'ReplAuto']
-
-[[plugins]]
-repo = 'prabirshrestha/vim-lsp'
-on_event = 'VimEnter'
-hook_add = '''
-    let g:lsp_async_completion = 1
-    let g:lsp_diagnostics_enabled = 1
-    let g:lsp_signs_enabled = 1
-    let g:lsp_diagnostics_echo_cursor = 1
-    let g:lsp_diagnostics_virtual_text_enabled = 0
-    let g:lsp_highlights_enabled = 1
-    let g:lsp_log_verbose = 0
-    let g:lsp_textprop_enabled = 1
-    let g:lsp_signs_error = {'text': 'x'}
-    let g:lsp_signs_warning = {'text': '!'}
-    nnoremap <C-l>d :LspDefinition<CR>
-    nnoremap <C-l>e :LspNextError<CR>
-    nnoremap <C-l>f :LspDocumentFormat<CR>
-    nnoremap <C-l>h :LspHover<CR>
-    nnoremap <C-l>r :LspReferences<CR>
-    nnoremap <C-l>w :LspNextWarning<CR>
-'''
-
-# [[plugins]]
-# repo = 'Shougo/ddc-nvim-lsp'
-
-[[plugins]]
-repo = 'shun/ddc-vim-lsp'
-depends = ['vim-lsp']
 
 [[plugins]]
 repo = 'mattn/vim-lsp-settings'
