Revert "change to use common augroup in vimrc"
This reverts commit 7a1390a697477c9507a703f410459b063e4bda6f.

--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -177,7 +177,10 @@ hook_add = '''
         nmap <buffer> fc <Plug>(fern-action-cd) :echo "cd to " . getcwd()<CR>
     endfunction
 
-    autocmd vimrc FileType fern call s:init_fern()
+    augroup fern-custom
+        autocmd! *
+        autocmd FileType fern call s:init_fern()
+    augroup END
 '''
 
 [[plugins]]
