add edge colorscheme

--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -66,6 +66,9 @@ repo = 'cocopon/iceberg.vim'
 
 [[plugins]]
 repo = 'savq/melange'
+
+[[plugins]]
+repo = 'sainnhe/edge'
 # colorscheme end
 
 [[plugins]]
