--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -229,7 +229,7 @@ hook_post_source = '''
 '''
 
 [[plugins]]
-repo = 'vim-skk/denops-skkeleton.vim'
+repo = 'vim-skk/skkeleton'
 hook_add = '''
     imap <C-j> <Plug>(skkeleton-toggle)
     cmap <C-j> <Plug>(skkeleton-toggle)
