--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -258,3 +258,10 @@ hook_add = '''
     \   alwaysShown = false,
     \ }
 '''
+
+[[plugins]]
+repo = 'AndrewRadev/linediff.vim'
+hook_add = '''
+    let g:linediff_first_buffer_command = 'leftabove new'
+    let g:linediff_second_buffer_command = 'rightbelow vertical new'
+'''
