--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -251,3 +251,6 @@ hook_add = '''
     let g:linediff_first_buffer_command = 'leftabove new'
     let g:linediff_second_buffer_command = 'rightbelow vertical new'
 '''
+
+[[plugins]]
+repo = 'elzr/vim-json'
