add Ddufile/line/buffer/Rg commands

--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -47,6 +47,15 @@ repo = 'Shougo/ddu-ui-ff'
 repo = 'Shougo/ddu-source-file_rec'
 
 [[plugins]]
+repo = 'Shougo/ddu-source-line'
+
+[[plugins]]
+repo = 'shun/ddu-source-buffer'
+
+[[plugins]]
+repo = 'shun/ddu-source-rg'
+
+[[plugins]]
 repo = 'Shougo/ddu-filter-matcher_substring'
 
 [[plugins]]
