add transparency options to windows terminal

--- a/WindowsTerminal/settings.json
+++ b/WindowsTerminal/settings.json
@@ -18,7 +18,9 @@
             "fontSize": 9,
             "foreground": "#FFFFFF",
             "startingDirectory": "%USERPROFILE%",
-            "cursorShape": "filledBox"
+            "cursorShape": "filledBox",
+            "useAcrylic": true,
+            "acrylicOpacity": 0.7
         },
         "list": [
             {
