--- a/.vim/dein_lazy.toml
+++ b/.vim/dein_lazy.toml
@@ -55,7 +55,7 @@ on_event = 'VimEnter'
 hook_source = '''
 let g:lsp_settings = {
 \   'clangd': {
-\       'args': ['--all-scopes-completion', '--background-index', '--clang-tidy', '--limit-references=0', '--limit-results=0'],
+\       'args': ['--all-scopes-completion', '--background-index', '--clang-tidy'],
 \   },
 \ }
 '''
