--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -173,6 +173,7 @@ hook_add = '''
     let g:lsp_textprop_enabled = 1
     let g:lsp_signs_error = {'text': 'x'}
     let g:lsp_signs_warning = {'text': '!'}
+    nnoremap <C-l>a :LspCodeAction<CR>
     nnoremap <C-l>d :LspDefinition<CR>
     nnoremap <C-l>e :LspNextError<CR>
     nnoremap <C-l>f :LspDocumentFormat<CR>
