--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -290,3 +290,10 @@ hook_add = '''
         \ 'jj': 'escape',
     \ })
 '''
+
+[[plugins]]
+repo = 'goerz/jupytext.vim'
+hook_add = '''
+    let g:jupytext_fmt = 'py:percent'
+    let g:jupytext_filetype_map = {'py': 'python'}
+'''
