--- a/.vim/dein_lazy.toml
+++ b/.vim/dein_lazy.toml
@@ -36,6 +36,7 @@ hook_source = '''
 let g:lsp_settings = {
 \   'clangd': {
 \       'args': ['--all-scopes-completion', '--background-index', '--clang-tidy'],
+\       'initialization_options': { 'usePlaceholders': v:true, },
 \   },
 \ }
 '''
