--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -48,6 +48,12 @@ repo = 'Shougo/ddu.vim'
 repo = 'Shougo/ddu-ui-ff'
 
 [[plugins]]
+repo = 'Shougo/ddu-ui-filer'
+
+[[plugins]]
+repo = 'Shougo/ddu-source-file'
+
+[[plugins]]
 repo = 'Shougo/ddu-source-file_rec'
 
 [[plugins]]
