--- a/.vim/dein_lazy.toml
+++ b/.vim/dein_lazy.toml
@@ -63,3 +63,10 @@ hook_add = '''
     nnoremap <buffer> <silent> <leader>jr :JupyterSendRange<CR>
     vnoremap <buffer> <silent> <leader>jr :JupyterSendRange<CR>
 '''
+
+[[plugins]]
+repo = 'nvim-treesitter/nvim-treesitter'
+merged = 0
+on_event = 'BufRead'
+hook_post_update = 'TSUpdate'
+hook_source = 'source ~/dotfiles/.vim/nvim-treesitter.lua'
