add ddc-cmdline-history support

--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -223,8 +223,8 @@ repo = 'Shougo/context_filetype.vim'
 [[plugins]]
 repo = 'haya14busa/vim-edgemotion'
 hook_add = '''
-    map <C-j> <Plug>(edgemotion-j)
-    map <C-k> <Plug>(edgemotion-k)
+    nmap <C-j> <Plug>(edgemotion-j)
+    nmap <C-k> <Plug>(edgemotion-k)
 '''
 
 [[plugins]]
