--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -124,6 +124,9 @@ repo = 'tpope/vim-surround'
 
 [[plugins]]
 repo = 'Yggdroot/indentLine'
+hook_add = '''
+    let g:indentLine_setConceal = 0
+'''
 
 [[plugins]]
 repo = 'bronson/vim-trailing-whitespace'
