--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -69,6 +69,9 @@ repo = 'shun/ddu-source-buffer'
 repo = 'shun/ddu-source-rg'
 
 [[plugins]]
+repo = 'matsui54/ddu-source-command_history'
+
+[[plugins]]
 repo = 'Shougo/ddu-filter-matcher_substring'
 
 [[plugins]]
