--- a/.vim/dein_lazy.toml
+++ b/.vim/dein_lazy.toml
@@ -68,5 +68,5 @@ hook_add = '''
 repo = 'nvim-treesitter/nvim-treesitter'
 merged = 0
 on_event = 'BufRead'
-hook_post_update = 'TSUpdate'
 hook_source = 'source ~/dotfiles/.vim/nvim-treesitter.lua'
+# hook_post_update = 'TSUpdate'
