--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -202,7 +202,12 @@ hook_add = '''
     let g:lsp_signs_error = {'text': 'x'}
     let g:lsp_signs_warning = {'text': '!'}
     nnoremap <C-l>a :LspCodeAction<CR>
+    nnoremap <C-l>c :LspDeclaration<CR>
+    nnoremap <C-l>pc :LspPeekDeclaration<CR>
     nnoremap <C-l>d :LspDefinition<CR>
+    nnoremap <C-l>pd :LspPeekDefinition<CR>
+    nnoremap <C-l>i :LspImplementation<CR>
+    nnoremap <C-l>pi :LspPeekImplementation<CR>
     nnoremap <C-l>e :LspNextError<CR>
     nnoremap <C-l>f :LspDocumentFormat<CR>
     nnoremap <C-l>h :LspHover<CR>
